spacing fix for prompts

--- a/resources/assets/css/components/overlay.less
+++ b/resources/assets/css/components/overlay.less
@@ -129,7 +129,7 @@
 }
 .menu-prompt-body {
   .flex(1 1 100%);
-  padding: 2rem;
+  padding: 0 2rem;
   &:last-of-type {
     padding-bottom: @tile;
   }
